--- a/app.json
+++ b/app.json
@@ -1,24 +1,16 @@
 {
   "expo": {
-    "name": "ShoppingList",
-    "slug": "ShoppingList",
+    "name": "Shopping List",
+    "slug": "shopping-list",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
-    "splash": {
-      "image": "./assets/splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
-    },
+    "icon": "./assets/list.png",
     "updates": {
       "fallbackToCacheTimeout": 0
     },
     "assetBundlePatterns": [
       "**/*"
     ],
-    "ios": {
-      "supportsTablet": true
-    },
     "web": {
       "favicon": "./assets/favicon.png"
     },
